--- a/MO1UNI3/CV.HTML
+++ b/MO1UNI3/CV.HTML
@@ -27,7 +27,7 @@
     <h5>Perfil</h5>
         <p>Me gusta realizar ejercicios el aire libre</p>
         <p>Disfruto de leer y de compartir tiempo con familia y amigos</p>
-        <p>Me interesa estudiar y conocer sobre temas diversos así como formar grupos interativos</p>
+        <p>Me interesa estudiar y conocer sobre temas diversos así como formar grupos interaCtivos</p>
 
     <h6>Si querés contactarme podés completar el siguiente <a href="Formularioparacv.html">formulario</a></h6>
 
