--- a/M1U4/CV.HTML
+++ b/M1U4/CV.HTML
@@ -28,9 +28,9 @@
     <h5 class="DESTACADOPERFIL">Perfil</h5>
         <p style="font-family: Arial, Helvetica, sans-serif;">Me gusta realizar ejercicios el aire libre</p>
         <p style="font-family: Arial, Helvetica, sans-serif;">Disfruto de leer y de compartir tiempo con familia y amigos</p>
-        <p style="font-family: Arial, Helvetica, sans-serif;">Me interesa estudiar y conocer sobre temas diversos así como formar grupos interaCtivos</p>
+        <p style="font-family: Arial, Helvetica, sans-serif;">Me interesa estudiar y conocer sobre temas diversos así como formar grupos interactivos</p>
 
-    <h6>Si querés contactarme podés completar el siguiente <a href="Formularioparacv.html">formulario</a></h6>
+    <h6 class="DESTACARFORM">Si querés contactarme podés completar el siguiente <a href="Formularioparacv.html">formulario</a></h6>
 
     
 </body>
