--- a/M2U1/CV.HTML
+++ b/M2U1/CV.HTML
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MÓDULO 2 : UNIDAD 1</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lobster&family=Lobster+Two&family=Xanh+Mono&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="cv.css">
     
 </head>
